--- a/src/gui/FXML.fxml
+++ b/src/gui/FXML.fxml
@@ -32,9 +32,9 @@
                                                   <columns>
                                                     <TableColumn fx:id="taskIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
                                                     <TableColumn fx:id="taskTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
-                                                      <TableColumn fx:id="taskDueDateCol" minWidth="150.0" prefWidth="150.0" sortable="false" text="Due Date" />
-                                                      <TableColumn fx:id="taskTagsCol" minWidth="125.0" prefWidth="150.0" sortable="false" text="Tags" />
-                                                      <TableColumn fx:id="taskPriorityCol" minWidth="80.0" prefWidth="100.0" sortable="false" text="Priority" />
+                                                      <TableColumn fx:id="taskDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
+                                                      <TableColumn fx:id="taskTagsCol" minWidth="150.0" prefWidth="125.0" sortable="false" text="Tags" />
+                                                      <TableColumn fx:id="taskPriorityCol" minWidth="80.0" sortable="false" text="Priority" />
                                                   </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -52,8 +52,8 @@
                                                    <columns>
                                                       <TableColumn fx:id="taskDoneIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
                                                       <TableColumn fx:id="taskDoneTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
-                                                      <TableColumn fx:id="taskDoneDueDateCol" minWidth="150.0" prefWidth="150.0" sortable="false" text="Due Date" />
-                                                      <TableColumn fx:id="taskDoneTagsCol" minWidth="125.0" prefWidth="150.0" sortable="false" text="Tags" />
+                                                      <TableColumn fx:id="taskDoneDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
+                                                      <TableColumn fx:id="taskDoneTagsCol" minWidth="150.0" prefWidth="150.0" sortable="false" text="Tags" />
                                                       <TableColumn fx:id="taskDonePriorityCol" minWidth="80.0" prefWidth="100.0" sortable="false" text="Priority" />
                                                    </columns>
                                                 </TableView>
@@ -80,11 +80,11 @@
                                                 <TableView fx:id="eventTable" VBox.vgrow="ALWAYS">
                                                    <columns>
                                                       <TableColumn fx:id="eventIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
-                                                      <TableColumn fx:id="eventTitleCol" minWidth="225.0" prefWidth="300.0" sortable="false" text="Title" />
-                                                      <TableColumn fx:id="eventStartDateCol" minWidth="175.0" prefWidth="175.0" sortable="false" text="Start Date" />
-                                                      <TableColumn fx:id="eventEndDateCol" minWidth="175.0" prefWidth="175.0" sortable="false" text="End Date" />
+                                                      <TableColumn fx:id="eventTitleCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Title" />
+                                                      <TableColumn fx:id="eventStartDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Start Date" />
+                                                      <TableColumn fx:id="eventEndDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="End Date" />
                                                       <TableColumn fx:id="eventTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
-                                                      <TableColumn fx:id="eventPriorityCol" minWidth="80.0" prefWidth="100.0" sortable="false" text="Priority" />
+                                                      <TableColumn fx:id="eventPriorityCol" minWidth="80.0" sortable="false" text="Priority" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -98,11 +98,11 @@
                                                 <TableView fx:id="eventDoneTable" layoutX="10.0" layoutY="45.0" prefHeight="250.0">
                                                    <columns>
                                                       <TableColumn fx:id="eventDoneIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
-                                                      <TableColumn fx:id="eventDoneTitleCol" minWidth="225.0" prefWidth="300.0" sortable="false" text="Title" />
-                                                      <TableColumn fx:id="eventDoneStartDateCol" minWidth="175.0" prefWidth="175.0" sortable="false" text="Start Date" />
-                                                      <TableColumn fx:id="eventDoneEndDateCol" minWidth="175.0" prefWidth="175.0" sortable="false" text="End Date" />
+                                                      <TableColumn fx:id="eventDoneTitleCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Title" />
+                                                      <TableColumn fx:id="eventDoneStartDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Start Date" />
+                                                      <TableColumn fx:id="eventDoneEndDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="End Date" />
                                                       <TableColumn fx:id="eventDoneTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
-                                                      <TableColumn fx:id="eventDonePriorityCol" minWidth="80.0" prefWidth="100.0" sortable="false" text="Priority" />
+                                                      <TableColumn fx:id="eventDonePriorityCol" minWidth="80.0" prefWidth="8.0" sortable="false" text="Priority" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
