--- a/src/gui/FXML.fxml
+++ b/src/gui/FXML.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- @@author Joey Yeo -->
+
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
@@ -131,20 +134,21 @@
                      </padding>
                   </VBox>
                </children></AnchorPane>
-            <AnchorPane fx:id="helpPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" stylesheets="@help.css" visible="false" StackPane.alignment="CENTER">
+            <AnchorPane fx:id="helpPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" stylesheets="@help.css" StackPane.alignment="CENTER">
                <children>
-                  <ScrollPane focusTraversable="false" prefHeight="442.0" prefWidth="439.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <ScrollPane focusTraversable="false" prefHeight="442.0" prefWidth="439.0" styleClass="help-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
-                      <AnchorPane maxHeight="5000.0" minHeight="0.0" minWidth="0.0" prefWidth="380.0">
+                      <AnchorPane maxHeight="5000.0" minHeight="0.0" minWidth="0.0" prefWidth="380.0" styleClass="help-inner-pane">
                            <children>
-                              <VBox fx:id="helpVBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <VBox fx:id="helpVBox" styleClass="help-inner-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
-                                    <Label fx:id="headerLabel" focusTraversable="false" styleClass="header-style" text="Label" wrapText="true" />
+                                    <Label fx:id="headerLabel" focusTraversable="false" styleClass="header-label" text="Label" wrapText="true" />
+                                    <Text fx:id="bodyText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="body-style" text="Text" wrappingWidth="360.0" />
                                  </children>
                               </VBox>
                            </children>
                            <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                         </AnchorPane>
                     </content>
