Modify author tag

--- a/src/gui/help.css
+++ b/src/gui/help.css
@@ -1,4 +1,4 @@
-/** @@author Joey Yeo**/
+/** @@author A0127127L**/
 .help-pane{
 	-fx-background: linear-gradient(white, #C1C1E0);
 	-fx-effect: innershadow(two-pass-box , rgba(0,0,0,0.5) , 8, 0.0 , 0 , 0);
