--- a/src/gui/main.css
+++ b/src/gui/main.css
@@ -1,4 +1,4 @@
-//** @@author Joey Yeo **/
+//** @@author A0127127L **/
 .root-pane {
 	-fx-background-color: linear-gradient(#9F9FCF, midnightblue);
 }
